--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -1,132 +1,126 @@
 <!DOCTYPE html>
+<html>
 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
-
-<head>
-	<title>Title of Home Page</title>
-
-	<th:block id="home-static-resources">
-
-		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
-		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
-
-	</th:block>
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css">
 
 </head>
 
-<body>
-
-	<div id="home-header">
-
-		eBs
-
-	</div>
-
-	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">
-		Home Nav
-	</div>
-
-	<div id="home-main-content">
-
-		<h3>Category Master</h3>
-
-
-		<form th:action="@{/category/}" method="POST" th:object="${category}">
-			<div class="form-border">
-
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
+			<section class="content-wrapper">
 				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Category Code</label> <input type="text" class="form-control"
-							placeholder="store code" th:field="*{categCode}">
+					<!-- left column -->
+					<div class="col-md-12">
+						<div class="col-md-3">
+						</div>
+
+
+						<div class="col-md-6" style="margin-top: 20px;">
+							<!-- general form elements -->
+							<div class="box box-primary">
+								<div class="box-header with-border">
+									<h3 class="box-title">Category Master</h3>
+								</div><!-- /.box-header -->
+								<!-- form start -->
+								<form role="form" th:action="@{/category/}" method="POST" th:object="${category}">
+									<div class="box-body">
+
+										<div class="form-group">
+											<label for="inputEmail4">Category Code</label> <input type="text"
+												class="form-control" placeholder="store code" th:field="*{categCode}">
+										</div>
+										<div class="form-group">
+											<label for="inputEmail4">Description</label> <input type="text"
+												class="form-control" placeholder="location">
+										</div>
+
+										<div class="form-group ">
+											<label class="form-label">Acount Head</label> <label
+												style="color: red">*</label> <select class="form-control" id=""
+												title="type" th:field="*{accountHead}" required>
+												<option value="">Select</option>
+												<option value="t-1">type-1</option>
+												<option value="t-2">type-2</option>
+											</select>
+										</div>
+
+
+										<div class="form-group">
+											<label for="inputEmail4">Description</label> <input type="text"
+												class="form-control" placeholder="description"
+												th:field="*{description}">
+										</div>
+
+										<div class="form-group">
+											<label for="inputEmail4">Parent Code</label> <input type="text"
+												class="form-control" placeholder="parent code" th:field="*{parentCode}">
+										</div>
+
+										<div class="form-group">
+											<label for="inputEmail4">Parent Name</label> <input type="text"
+												class="form-control" placeholder="parent name" th:field="*{parentName}">
+										</div>
+
+										<div class="form-group" style="margin: 10px;">
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="Y"> <label class="form-check-label"
+													for="inlineRadio1">Active</label>
+											</div>
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="N"> <label class="form-check-label"
+													for="inlineRadio1">In-Active</label>
+											</div>
+
+										</div>
+
+									</div><!-- /.box-body -->
+
+									<div class="box-footer" style="margin: 10px">
+										<input type="submit" value="Submit" class="btn btn-primary" />
+										<input type="reset" value="Reset" class="btn btn-danger" />
+									</div>
+
+									<div class="row text-right m-10">
+										<a th:href="@{/category/list}">view category</a>
+									</div>
+								</form>
+
+
+							</div><!-- /.box -->
+
+						</div>
+
+
+						<div class="col-md-3">
+						</div>
 					</div>
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Description</label> <input type="text" class="form-control"
-							placeholder="location" >
-					</div>
+
 				</div>
+			</section>
 
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label class="form-label">Acount Head</label> <label style="color: red">*</label> <select
-							class="form-control" id="" title="type" th:field="*{accountHead}" required>
-							<option value="">Select</option>
-							<option value="t-1">type-1</option>
-							<option value="t-2">type-2</option>
-						</select>
-					</div>
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/app.min.js"></script>
 
-
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Description</label> <input type="text" class="form-control"
-							placeholder="description" th:field="*{description}">
-					</div>
-
-
-
-				</div>
-
-
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Parent Code</label> <input type="text" class="form-control"
-							placeholder="parent code" th:field="*{parentCode}">
-					</div>
-
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Parent Name</label> <input type="text" class="form-control"
-							placeholder="parent name" th:field="*{parentName}">
-					</div>
-
-				</div>
-
-
-
-				<!-- <div class="form-group" style="margin: 10px;">
-
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
-							class="form-check-label" for="inlineRadio1"
-							th:field="*{activeYn}">Active</label>
-					</div>
-
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
-							class="form-check-label" for="inlineRadio1"
-							th:field="*{activeYn}">In-Active</label>
-					</div>
-
-				</div>
- -->
-				<div class="row" style="margin: 10px">
-					<input type="submit" value="Submit" class="btn btn-primary" />
-					<input type="reset" value="Reset" class="btn btn-danger" />
-				</div>
-
-			</div>
-		</form>
-
-		<div class="row text-right m-10">
-			<a th:href="@{/category/list}">view category list</a>
-		</div>
-	</div>
-
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
-
+			<script src="../../js/demo.js"></script>
 </body>
 
 </html>
