--- a/src/main/resources/templates/layouts/dummyFile.html
+++ b/src/main/resources/templates/layouts/dummyFile.html
@@ -27,23 +27,23 @@
 						</div>
 						
 						
-						<div class="col-md-6">
-							<!-- general form elements -->
+						<div class="col-md-6" style="margin-top: 20px;">
+						
 							<div class="box box-primary">
 								<div class="box-header with-border">
 									<h3 class="box-title">Quick Example</h3>
-								</div><!-- /.box-header -->
+								</div>
 								<!-- form start -->
 								<form role="form">
 									<div class="box-body">
-									</div><!-- /.box-body -->
+									</div>
 
 									<div class="box-footer">
 										<button type="submit" class="btn btn-primary">Submit</button>
 									</div>
 
 								</form>
-							</div><!-- /.box -->
+							</div>
 						</div>
 						
 						
