--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -22,75 +22,48 @@
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
-	<div class="wrapper">
-			<div th:replace="fragments/header :: header">...</div>
+	<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+	
+	<div class="wrapper">
+			
+			
+      <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+          <h1>
+            Blank page
+            <small>it all starts here</small>
+          </h1>
+          <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="#">Examples</a></li>
+            <li class="active">Blank page</li>
+          </ol>
+        </section>
 
+        <!-- Main content -->
+        <section class="content">
 
+          <!-- Default box -->
+          <div class="box">
+            <div class="box-header with-border">
+              <h3 class="box-title">Title</h3>
+              <div class="box-tools pull-right">
+                <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
+                <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
+              </div>
+            </div>
+            <div class="box-body">
+              Start creating your amazing application!
+            </div><!-- /.box-body -->
+            <div class="box-footer">
+              Footer
+            </div><!-- /.box-footer-->
+          </div><!-- /.box -->
 
-
-						<div class="col-md-6">
-							<!-- general form elements -->
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">Quick Example</h3>
-								</div><!-- /.box-header -->
-								<!-- form start -->
-								<form role="form">
-									<div class="box-body">
-
-
-										<div class="form-group">
-											<label for="exampleInputEmail1">Email address</label>
-											<input type="email" class="form-control" id="exampleInputEmail1"
-												placeholder="Enter email">
-										</div>
-										<div class="form-group">
-											<label for="exampleInputPassword1">Password</label>
-											<input type="password" class="form-control" id="exampleInputPassword1"
-												placeholder="Password">
-										</div>
-										<div class="form-group">
-											<label for="exampleInputFile">File input</label>
-											<input type="file" id="exampleInputFile">
-											<p class="help-block">Example block-level help text here.</p>
-										</div>
-
-
-										<div class="checkbox">
-											<label>
-												<input type="checkbox"> Check me out
-											</label>
-										</div>
-
-
-									</div><!-- /.box-body -->
-
-									<div class="box-footer">
-										<button type="submit" class="btn btn-primary">Submit</button>
-									</div>
-
-
-								</form>
-							</div><!-- /.box -->
-						</div>
-
-
-
-						<div class="col-md-3">
-						</div>
-
-
-					</div>
-
-				</div>
-			</section>
+        </section><!-- /.content -->
+      </div>
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
