--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,9 +5,9 @@
 	<!-- Logo -->
 	<a href="../../index2.html" class="logo">
 		<!-- mini logo for sidebar mini 50x50 pixels -->
-		<span class="logo-mini"><b>A</b>LT</span>
+		<span class="logo-mini"><b>E</b>RP</span>
 		<!-- logo for regular state and mobile devices -->
-		<span class="logo-lg"><b>Admin</b>LTE</span>
+		<span class="logo-lg"><b>ERP</b></span>
 	</a>
 	<!-- Header Navbar: style can be found in header.less -->
 	<nav class="navbar navbar-static-top" role="navigation">
@@ -156,7 +156,7 @@
 				<li class="dropdown user user-menu">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						<img src="/img/contact.png" class="user-image" alt="User Image">
-						<span class="hidden-xs">Alexander Pierce</span>
+						<span class="hidden-xs">User</span>
 					</a>
 					<ul class="dropdown-menu">
 						<!-- User image -->
