--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,6 +2,6 @@
 	<div class="pull-right hidden-xs">
 		<b>Version</b> 2.3.0
 	</div>
-	<strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
+	<strong>Copyright &copy; 2021-2022 <a href="http://almsaeedstudio.com">Access Infotech</a>.</strong> All rights
 	reserved.
 </footer>
