--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -63,6 +63,14 @@
 					<span>Charts</span>
 					<i class="fa fa-angle-left pull-right"></i>
 				</a>
+				    <ul class="treeview-menu">
+        <li><a th:href="@{/city/}">Product Management</a></li>
+        <li><a th:href="@{/program/}">Order Management</a></li>
+    </ul>
+				
+				
+				
+				
 				<ul class="treeview-menu">
 					<li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
 					<li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
