--- a/src/main/resources/templates/layouts/Master/city.html
+++ b/src/main/resources/templates/layouts/Master/city.html
@@ -12,22 +12,40 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css">
 
+<style type="text/css">
+body {
+	min-width: 780px !important;
+}
+
+.form-panel {
+	margin-top: 10px !important;
+	margin-bottom: 10px !important;
+}
+
+.form-panel box-body row {
+	margin: 10px !important;
+}
+
+.row label {
+	font-weight: 500 !important;
+	font-size: 14px !important;
+}
+</style>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
-	<div class="wrapper">
-		<div>
-			<div th:replace="fragments/header :: header">...</div>
+<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
+	<div class="wrapper">
+		
+			
 			<section class="content-wrapper">
 				<div class="row">
 					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3">
-						</div>
+					<div class="col-lg-12">
+						
 
-
-						<div class="col-md-6" style="margin-top: 20px;">
+						<div class="form-panel" style="margin-left: 20px !important">
 							<!-- general form elements -->
 							<div class="box box-primary">
 								<div class="box-header with-border">
@@ -89,10 +107,6 @@
 										</div>
 
 
-										
-
-
-
 									</div><!-- /.box-body -->
 
 									
@@ -114,6 +128,11 @@
 				</div>
 			</section>
 
+		</div>
+			
+			
+			
+			
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
         
