--- a/src/main/resources/templates/layouts/Master/city.html
+++ b/src/main/resources/templates/layouts/Master/city.html
@@ -12,40 +12,22 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css">
 
-<style type="text/css">
-body {
-	min-width: 780px !important;
-}
-
-.form-panel {
-	margin-top: 10px !important;
-	margin-bottom: 10px !important;
-}
-
-.form-panel box-body row {
-	margin: 10px !important;
-}
-
-.row label {
-	font-weight: 500 !important;
-	font-size: 14px !important;
-}
-</style>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
-<div th:replace="fragments/header :: header">...</div>
-			<div th:replace="fragments/sidebar :: sidebar">...</div>
 	<div class="wrapper">
-		
-			
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
 			<section class="content-wrapper">
 				<div class="row">
 					<!-- left column -->
-					<div class="col-lg-12">
-						
+					<div class="col-md-12">
+						<div class="col-md-3">
+						</div>
 
-						<div class="form-panel" style="margin-left: 20px !important">
+
+						<div class="col-md-6" style="margin-top: 20px;">
 							<!-- general form elements -->
 							<div class="box box-primary">
 								<div class="box-header with-border">
@@ -66,12 +48,12 @@ body {
 										</div>
 
 
-										<div class="form-group col-md-6">
+										<div class="form-group col-md-12">
 											<label>Region Code</label> <input type="text" class="form-control"
 												placeholder="region code" th:field="*{regionCode}">
 										</div>
 
-										<div class="form-group col-md-6">
+										<div class="form-group col-md-12">
 											<label>State</label> <label style="color: red">*</label> <select
 												class="form-control" title="state Name" required th:field="*{state}">
 												<option value="">Select State</option>
@@ -90,7 +72,7 @@ body {
 												class="form-control" placeholder="city type" th:field="*{cityType}">
 										</div>
 
-										<div class="form-group col-md-6">
+										<div class="form-group" style="margin: 10px;">
 
 											<div class="form-check form-check-inline">
 												<input class="form-check-input" type="radio" name="inlineRadioOptions"
@@ -105,6 +87,10 @@ body {
 											</div>
 
 										</div>
+
+
+										
+
 
 
 									</div><!-- /.box-body -->
@@ -128,11 +114,6 @@ body {
 				</div>
 			</section>
 
-		</div>
-			
-			
-			
-			
 			<div th:replace="fragments/footer :: footer">...</div>
 			<!--   <section class="content">
         
