--- a/src/main/resources/templates/layouts/Master/designation.html
+++ b/src/main/resources/templates/layouts/Master/designation.html
@@ -1,92 +1,140 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<script src="js/settings.js"></script>
-<script src="js/app.js"></script>
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
-	rel="stylesheet" />
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+<html>
 
-<script src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>
-<script type="text/javascript" th:src="@{/js/myJavaScript.js}"></script>
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css">
 
-<style>
-body {
-	opacity: 0;
-}
-
-.uppercase {
-	text-transform: uppercase;
-}
-
-.my-error-class {
-	color: #FF0000;
-	font-size: 12px;
-	/* red */
-}
-</style>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() {
-		dataLayer.push(arguments);
-	}
-	gtag('js', new Date());
-
-	gtag('config', 'UA-120946860-7');
-</script>
-<head>
-<meta charset="utf-8" />
-<title>HRMS</title>
 </head>
-<body>
+
+<body class="hold-transition skin-blue sidebar-mini">
 	<div class="wrapper">
-	
-		<nav id="sidebar" class="sidebar" aria-label="Site sidebar">
-			<div th:replace="fragments/sidebar :: div"></div>
-		</nav>
-		
-		
-		<div class="main">
-			<div th:replace="fragments/header ::div"></div>
-			<main class="content">
-				<div class="container-fluid">
-					<div class="header">
-						<h1 class="header-title">Index</h1>
-						<nav aria-label="breadcrumb"></nav>
-					</div>
-					<div class="row">
-						<div class="col-12">
-							<div class="card">
-								<div class="card-header" style="background: #f4f7fc;">
-									<h6 class="card-title"
-										style="text-decoration: underline; color: #dc2eaf;">Acts</h6>
-									<input type="hidden" id="mess" name="mess"
-										th:value="${message}">
-								</div>
-								<div class="card-body">
-									
-									<!--main content -->
-									
-									
-									<h1>dhfgksdfkd</h1>
-									
-									
-								</div>
-
-							</div>
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
+			<section class="content-wrapper">
+				<div class="row">
+					<!-- left column -->
+					<div class="col-md-12">
+						<div class="col-md-3">
 						</div>
-						
 
+
+						<div class="col-md-6" style="margin-top: 20px;">
+
+							<div class="box box-primary">
+								<div class="box-header with-border">
+									<h3 class="box-title">Designation Master</h3>
+								</div>
+								<!-- form start -->
+
+
+								<form role="form" th:action="@{/designation/}" method="POST" th:object="${designation}">
+									<div class="box-body">
+
+										<div class="form-group col-md-12">
+											<label for="inputEmail4">Designation Code</label> <input type="text"
+												class="form-control" placeholder="designation code"
+												th:field="*{desigCode}">
+										</div>
+										<div class="form-group col-md-12">
+											<label for="inputPassword4">Designation Name</label> <input type="text"
+												class="form-control" placeholder="designation name"
+												th:field="*{desigName}">
+										</div>
+
+										<div class="form-group col-md-12">
+											<label for="inputEmail4">Pay Scale Code</label> <input type="text"
+												class="form-control" placeholder="pay scale code"
+												th:field="*{payScaleCode}">
+										</div>
+										<div class="form-group col-md-6">
+											<label for="inputPassword4">Basic Slab 1</label> <input type="number"
+												class="form-control" placeholder="basic slab 1"
+												th:field="*{basicSlab1}">
+										</div>
+
+										<div class="form-group col-md-6">
+											<label for="inputEmail4">Basic Slab 2</label> <input type="number"
+												class="form-control" placeholder="basic slab 2"
+												th:field="*{basicSlab2}">
+										</div>
+
+										<div class="form-group col-md-12">
+											<label for="inputEmail4">Basic Slab 3</label> <input type="number"
+												class="form-control" placeholder="basic slab 3"
+												th:field="*{basicSlab3}">
+										</div>
+
+										<div class="form-group col-md-6">
+											<label for="inputEmail4">Increment1</label> <input type="number"
+												class="form-control" placeholder="increement 1"
+												th:field="*{increment1}">
+										</div>
+
+										<div class="form-group col-md-6">
+											<label for="inputEmail4">Increment2</label> <input type="number"
+												class="form-control" placeholder="increement 2"
+												th:field="*{increment2}">
+										</div>
+
+										<div class="form-group" style="margin: 10px;">
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="Y"> <label class="form-check-label"
+													for="inlineRadio1">Active</label>
+											</div>
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="N"> <label class="form-check-label"
+													for="inlineRadio1">In-Active</label>
+											</div>
+
+										</div>
+
+
+
+									</div>
+
+									<div class="box-footer">
+										<input type="submit" value="Submit" class="btn btn-primary" />
+										<input type="reset" value="Reset" class="btn btn-danger" />
+									</div>
+									<a th:href="@{/designation/list}">view designation list</a>
+								</form>
+							</div>
+
+							<div class="box-footer">
+								<button type="submit" class="btn btn-primary">Submit</button>
+							</div>
+
+
+						</div>
+
+
+						<div class="col-md-3">
+						</div>
 					</div>
-				</div>
 
-			</main>
-			<footer class="footer">
-				<div th:replace="fragments/footer :: div"></div>
-			</footer>
-		</div>
-	</div>
-	
+				</div>
+			</section>
+
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/app.min.js"></script>
+
+			<script src="../../js/demo.js"></script>
 </body>
+
 </html>
